<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/what_are_the_colors_in_the_indian_national_flag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/white" />


        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/yellow" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/orange" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/green" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/page_three_next_btn"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:text="@string/next"/>

</LinearLayout>