<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/who_is_the_best_cricketer_in_the_world"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cricketer_radio_group">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sachin_tendulkar"
                android:id="@+id/option1"
                android:checked="false"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virat_kolli"
                android:id="@+id/option2"
                android:checked="false"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adam_gilchirst"
                android:id="@+id/option3"
                android:checked="false"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jacques_kallis"
                android:id="@+id/option4"
                android:checked="false"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/page_two_next_btn"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:text="@string/next"/>

</LinearLayout>