<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="Hello " />

        <TextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_tv" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/here_are_the_answers_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textColor="#000000"
            android:text="@string/who_is_the_best_cricketer_in_the_world" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="Answer : " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#000000"
                android:id="@+id/cricketer_name_tv" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textColor="#000000"
            android:text="@string/what_are_the_colors_in_the_national_flag" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="Answer : " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#000000"
                android:id="@+id/flag_colors_tv" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/finish_btn"
            android:background="@color/colorPrimary"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:text="@string/finish"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history_btn"
            android:background="@color/colorPrimary"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:text="@string/history"/>



    </LinearLayout>

</LinearLayout>